--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
                         <a href="#" class="button">Fale Conosco</a>
 
                     </div>   
-                    
-                
+                    <img src="/assets/img/banner.jpg" alt="imagem ilustrativa de infraestrutura de redes" class="main_img" />
                 </div>
             </section>
 
